# chambers

./: .gitignore  CMakeLists.txt  TOPLS.C  s_func 2.ipynb  s_func.ipynb
.temp/HOLOD-win64/: CALC_Q.C  GRAPHADV.LIB  HOL3.H  HOL_PRN.C
.temp/PROG/HOLOD_source_v1.0.0/HOLOD-win64/: CALC_T.C  HOLOD3.REZ  TOPLS.C
.temp/backup1/: GRAFIC.C  HOL3.C  HOL_MATH.C  HOL_PRN.C
HOLOD/: HOL3.C  HOL3.H  HOLODOK  HOL_MATH.C
HOLOD-win64/: HOL3.C  HOL3.H  HOL_PRN.C
HOLOD/DOSBox/: dosbox.conf
HOLOD/DOSBox/dosbox.app/Contents/Resources/: dosbox.icns
HOLOD/HOLOD/: ALGOR.LEX  CALC_Q.C  CALC_T.C  GRAFIC.C  HOL3.C  HOL3.H  HOL31.PIF  HOLOD3.REZ  HOL_MATH.C  HOL_PRN.C  TCCONFIG.TC  TOPLS.C  start.bat
HOLPY/: calc_t.py  funcs.py  main.py  s_func.py
INCLUDE/: ALLOC.H  MATH.H  STDARG.H  STDLIB.H
PROG/HOLOD_source_v1.0.0/HOLOD-win64/: HOL3.C
PROG/HOLOD_v1.0.0/: HOLOD3.REZ
exe_old/: keyrus.com
src/: CALC_T.C  GRAFIC.C  HOL3.C  HOL3.H  HOL3.PRJ  HOL_MATH.C
temp/backup1/: CALC_T.C  HOL3.H
